// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`multistep > Allows step advancment when current step is invalid but allowIncomplete is true 1`] = `
"<div class=\\"formkit-outer\\" id=\\"input_0\\" data-family=\\"multi-step\\" data-type=\\"multi-step\\">
  <div class=\\"formkit-wrapper\\" data-tab-style=\\"progress\\" data-hide-labels=\\"true\\">
    <div class=\\"formkit-tabs\\" role=\\"tablist\\"><button class=\\"formkit-tab\\" type=\\"button\\" data-active=\\"false\\" data-valid=\\"false\\" data-visited=\\"true\\" role=\\"tab\\" id=\\"input_0_tab_0\\" aria-selected=\\"false\\" aria-controls=\\"input_1\\" tabindex=\\"-1\\" style=\\"\\">
        <!----><span class=\\"formkit-badge\\" role=\\"presentation\\">1</span>
        <!---->
      </button><button class=\\"formkit-tab\\" type=\\"button\\" data-active=\\"true\\" data-valid=\\"true\\" role=\\"tab\\" id=\\"input_0_tab_1\\" aria-selected=\\"true\\" aria-controls=\\"input_5\\" tabindex=\\"0\\" style=\\"\\" data-visited=\\"true\\">
        <!---->
        <!----><span class=\\"formkit-badge\\" role=\\"presentation\\"><!----></span>
      </button><button class=\\"formkit-tab\\" type=\\"button\\" data-active=\\"false\\" data-valid=\\"true\\" role=\\"tab\\" id=\\"input_0_tab_2\\" aria-selected=\\"false\\" aria-controls=\\"input_3\\" tabindex=\\"-1\\" style=\\"\\">
        <!---->
        <!---->
        <!---->
      </button></div>
    <div class=\\"formkit-steps\\">
      <div class=\\"formkit-step\\" data-type=\\"step\\" id=\\"input_1\\" role=\\"tabpanel\\" aria-labelledby=\\"input_0_tab_0\\" hidden=\\"\\">
        <div class=\\"formkit-step-inner\\">
          <div class=\\"formkit-outer\\" data-family=\\"text\\" data-type=\\"text\\" data-invalid=\\"true\\" data-submitted=\\"true\\">
            <div class=\\"formkit-wrapper\\">
              <!---->
              <div class=\\"formkit-inner\\">
                <!---->
                <!----><input class=\\"formkit-input\\" type=\\"text\\" name=\\"text_2\\" id=\\"input_2\\" aria-describedby=\\"input_2-rule_required\\">
                <!---->
                <!---->
              </div>
            </div>
            <!---->
            <ul class=\\"formkit-messages\\">
              <li class=\\"formkit-message\\" id=\\"input_2-rule_required\\" data-message-type=\\"validation\\">Text_2 is required.</li>
            </ul>
          </div>
        </div>
        <div class=\\"formkit-step-actions\\">
          <!---->
          <div class=\\"formkit-step-next\\">
            <div class=\\"formkit-outer\\" data-family=\\"button\\" data-type=\\"button\\">
              <!---->
              <div class=\\"formkit-wrapper\\"><button data-next=\\"true\\" class=\\"formkit-input\\" type=\\"button\\" name=\\"button_6\\" id=\\"input_8\\">
                  <!---->
                  <!---->Next
                  <!---->
                  <!---->
                </button></div>
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div class=\\"formkit-step\\" data-type=\\"step\\" id=\\"input_3\\" role=\\"tabpanel\\" aria-labelledby=\\"input_0_tab_2\\" hidden=\\"\\">
        <div class=\\"formkit-step-inner\\">
          <!---->
        </div>
        <div class=\\"formkit-step-actions\\">
          <div class=\\"formkit-step-previous\\">
            <div class=\\"formkit-outer\\" data-family=\\"button\\" data-type=\\"button\\">
              <!---->
              <div class=\\"formkit-wrapper\\"><button data-prev=\\"true\\" class=\\"formkit-input\\" type=\\"button\\" name=\\"button_3\\" id=\\"input_4\\">
                  <!---->
                  <!---->Previous
                  <!---->
                  <!---->
                </button></div>
              <!---->
            </div>
          </div>
          <!---->
        </div>
      </div>
      <div class=\\"formkit-step\\" data-type=\\"step\\" id=\\"input_5\\" role=\\"tabpanel\\" aria-labelledby=\\"input_0_tab_1\\">
        <div class=\\"formkit-step-inner\\">
          <!---->
        </div>
        <div class=\\"formkit-step-actions\\">
          <div class=\\"formkit-step-previous\\">
            <div class=\\"formkit-outer\\" data-family=\\"button\\" data-type=\\"button\\">
              <!---->
              <div class=\\"formkit-wrapper\\"><button data-prev=\\"true\\" class=\\"formkit-input\\" type=\\"button\\" name=\\"button_4\\" id=\\"input_6\\">
                  <!---->
                  <!---->Previous
                  <!---->
                  <!---->
                </button></div>
              <!---->
            </div>
          </div>
          <div class=\\"formkit-step-next\\">
            <div class=\\"formkit-outer\\" data-family=\\"button\\" data-type=\\"button\\">
              <!---->
              <div class=\\"formkit-wrapper\\"><button data-next=\\"true\\" class=\\"formkit-input\\" type=\\"button\\" name=\\"button_5\\" id=\\"input_7\\">
                  <!---->
                  <!---->Next
                  <!---->
                  <!---->
                </button></div>
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`multistep > Does not allow step advancment when current step is invalid 1`] = `
"<div class=\\"formkit-outer\\" id=\\"input_0\\" data-family=\\"multi-step\\" data-type=\\"multi-step\\">
  <div class=\\"formkit-wrapper\\" data-tab-style=\\"tab\\" data-hide-labels=\\"false\\">
    <div class=\\"formkit-tabs\\" role=\\"tablist\\"><button class=\\"formkit-tab\\" type=\\"button\\" data-active=\\"true\\" data-valid=\\"false\\" data-visited=\\"true\\" role=\\"tab\\" id=\\"input_0_tab_0\\" aria-selected=\\"true\\" aria-controls=\\"input_1\\" tabindex=\\"0\\" style=\\"\\"><span class=\\"formkit-tab-label\\">Step One</span><span class=\\"formkit-badge\\" role=\\"presentation\\">1</span>
        <!---->
      </button><button class=\\"formkit-tab\\" type=\\"button\\" data-active=\\"false\\" data-valid=\\"true\\" role=\\"tab\\" id=\\"input_0_tab_1\\" aria-selected=\\"false\\" aria-controls=\\"input_5\\" tabindex=\\"-1\\" style=\\"\\"><span class=\\"formkit-tab-label\\">Step Three</span>
        <!---->
        <!---->
      </button><button class=\\"formkit-tab\\" type=\\"button\\" data-active=\\"false\\" data-valid=\\"true\\" role=\\"tab\\" id=\\"input_0_tab_2\\" aria-selected=\\"false\\" aria-controls=\\"input_3\\" tabindex=\\"-1\\" style=\\"\\"><span class=\\"formkit-tab-label\\">Step Two</span>
        <!---->
        <!---->
      </button></div>
    <div class=\\"formkit-steps\\">
      <div class=\\"formkit-step\\" data-type=\\"step\\" id=\\"input_1\\" role=\\"tabpanel\\" aria-labelledby=\\"input_0_tab_0\\">
        <div class=\\"formkit-step-inner\\">
          <div class=\\"formkit-outer\\" data-family=\\"text\\" data-type=\\"text\\" data-invalid=\\"true\\" data-submitted=\\"true\\">
            <div class=\\"formkit-wrapper\\">
              <!---->
              <div class=\\"formkit-inner\\">
                <!---->
                <!----><input class=\\"formkit-input\\" type=\\"text\\" name=\\"text_2\\" id=\\"input_2\\" aria-describedby=\\"input_2-rule_required\\">
                <!---->
                <!---->
              </div>
            </div>
            <!---->
            <ul class=\\"formkit-messages\\">
              <li class=\\"formkit-message\\" id=\\"input_2-rule_required\\" data-message-type=\\"validation\\">Text_2 is required.</li>
            </ul>
          </div>
        </div>
        <div class=\\"formkit-step-actions\\">
          <!---->
          <div class=\\"formkit-step-next\\">
            <div class=\\"formkit-outer\\" data-family=\\"button\\" data-type=\\"button\\">
              <!---->
              <div class=\\"formkit-wrapper\\"><button data-next=\\"true\\" class=\\"formkit-input\\" type=\\"button\\" name=\\"button_6\\" id=\\"input_8\\">
                  <!---->
                  <!---->Next
                  <!---->
                  <!---->
                </button></div>
              <!---->
            </div>
          </div>
        </div>
      </div>
      <div class=\\"formkit-step\\" data-type=\\"step\\" id=\\"input_3\\" role=\\"tabpanel\\" aria-labelledby=\\"input_0_tab_2\\" hidden=\\"\\">
        <div class=\\"formkit-step-inner\\">
          <!---->
        </div>
        <div class=\\"formkit-step-actions\\">
          <div class=\\"formkit-step-previous\\">
            <div class=\\"formkit-outer\\" data-family=\\"button\\" data-type=\\"button\\">
              <!---->
              <div class=\\"formkit-wrapper\\"><button data-prev=\\"true\\" class=\\"formkit-input\\" type=\\"button\\" name=\\"button_3\\" id=\\"input_4\\">
                  <!---->
                  <!---->Previous
                  <!---->
                  <!---->
                </button></div>
              <!---->
            </div>
          </div>
          <!---->
        </div>
      </div>
      <div class=\\"formkit-step\\" data-type=\\"step\\" id=\\"input_5\\" role=\\"tabpanel\\" aria-labelledby=\\"input_0_tab_1\\" hidden=\\"\\">
        <div class=\\"formkit-step-inner\\">
          <!---->
        </div>
        <div class=\\"formkit-step-actions\\">
          <div class=\\"formkit-step-previous\\">
            <div class=\\"formkit-outer\\" data-family=\\"button\\" data-type=\\"button\\">
              <!---->
              <div class=\\"formkit-wrapper\\"><button data-prev=\\"true\\" class=\\"formkit-input\\" type=\\"button\\" name=\\"button_4\\" id=\\"input_6\\">
                  <!---->
                  <!---->Previous
                  <!---->
                  <!---->
                </button></div>
              <!---->
            </div>
          </div>
          <div class=\\"formkit-step-next\\">
            <div class=\\"formkit-outer\\" data-family=\\"button\\" data-type=\\"button\\">
              <!---->
              <div class=\\"formkit-wrapper\\"><button data-next=\\"true\\" class=\\"formkit-input\\" type=\\"button\\" name=\\"button_5\\" id=\\"input_7\\">
                  <!---->
                  <!---->Next
                  <!---->
                  <!---->
                </button></div>
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;
